components/select/style/patch.less
.ant-select-dropdown {
  position: relative;
  top: 0;
  left: 0;
  display: block;
  width: 100%;

  .full-width {
    contain: initial;

    .cdk-virtual-scroll-content-wrapper {
      position: static;
    }

    .cdk-virtual-scroll-spacer {
      position: absolute;
      top: 0;
    }
  }
}

